updated mobile apis and swagger docs
