# app/controllers/api/mobile_controller.rb
@@ -50,7 +50,11 @@ class Api::MobileController < Api::ApiController
 	def get_visits
 		visitor_class = visitor_type == "vendor" ? :Vendor : :Guest
 		@visits = Visit.where(visitor_type:visitor_class,visitor_id:current_visitor.id,company_id:params['company_id']).select('id,person_name,on_date,visit_status,visit_entry_type,qrcode_id,tentative_datetime,on_date_time,end_date_time,event_id')
-		render json: {visits:@visits}, status: 200
+		@processed_visits = []
+		@visits.each do|visit|
+			@processed_visits << @visit.try(:kiosk_payload)
+		end
+		render json: {visits:@processed_visits}, status: 200
 	rescue => e
   		render json: {message: e.message}, status: 500
 	end
@@ -99,7 +103,7 @@ class Api::MobileController < Api::ApiController
 		visit_entry_type = :Visit
 	    time_millis = (Time.now.to_f * 1000).to_i
 	    qrcode_id = SecureRandom.uuid+"-"+time_millis.to_s
-	    @visit = Visit.create! visitor_type:ivisitor_type,visit_entry_type:visit_entry_type,visitor_id:current_visitor.id,person_name:payload['person_name'],tentative_datetime: payload['tentative_datetime'],company_id:payload['company_id'],department_id:payload['department_id'],visit_status: :pre_visit, qrcode_id:qrcode_id,triggered_by: 'Mobile'
+	    @visit = Visit.create! visitor_type:ivisitor_type,visit_entry_type:visit_entry_type,visitor_id:current_visitor.id,person_name:payload['person_name'],tentative_datetime: payload['tentative_datetime'],company_id:payload['company_id'],department_id:payload['department_id'],visit_status: :pre_visit, qrcode_id:qrcode_id,triggered_by: 'Mobile', send_message: params[:send_message], person_contact: params[:person_contact],triggered_by_os: params[:triggered_by_os]
 		msg = "#{visitor_type} will be visiting on #{payload['tentative_datetime']} "
 		if params[:visit_notes]
 			msg = params[:visit_notes]
